# TermiPro

./: .gitignore  LICENSE  README.md  claude.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: báo-cáo-lỗi.md  yêu-cầu-tính-năng.md
.github/workflows/: build.yml  release.yml
TermiMax/: CLAUDE.md
TermiMax/.claude/: metadata.json  settings.local.json
TermiMax/docs/: code-standards.md  codebase-summary.md  index.md  project-overview-pdr.md  system-architecture.md
TermiMax/esp32_test/: esp32_test.ino
TermiMax/termimax_flutter/: README.md  pubspec.yaml
TermiMax/termimax_flutter/rust/: Cargo.toml
TermiMax/termimax_flutter/rust/src/: frb_generated.rs
TermiMax/termimax_flutter/rust/src/api/: mod.rs  models.rs  serial.rs  state.rs
docs/: code-standards.md  codebase-summary.md  modbus.md  new-tab-modal.md  project-overview-pdr.md  system-architecture.md  tcp-client.md  tcp-server.md  update_docs.md
docs/helps/: getting-started.md  modbus-master.md  modbus-slave.md  mqtt.md  serial.md  tcp-client.md  tcp-server.md
plans/: update_feature_plan.md
sercret key/: termipro.key  termipro.key.pub
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  modbus.rs  modbus_slave.rs  mqtt.rs
src/components/: ConfirmDialog.vue  ModbusSlaveTab.vue  ModbusTab.vue  MqttTab.vue  NewTabModal.vue  SerialTab.vue  TabBar.vue  TcpClientTab.vue  TcpServerTab.vue  Toast.vue  UpdateModal.vue
src/stores/: tabStore.js
(+66 files in other folders)
